@@ -6,7 +6,7 @@
 
     <groupId>com.epam.prejap.ess</groupId>
     <artifactId>helpers</artifactId>
-    <version>0.2</version>
+    <version>0.6</version>
     <name>Java Essentail Classes :: Helpers</name>
     <description>Solutions for the task about helpers</description>
     <url>https://careers.epam-poland.pl/training/juniors-java-online-program</url>
@@ -14,7 +14,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <project.java.version>11</project.java.version>
+        <project.java.version>15</project.java.version>
         <maven.compiler.release>${project.java.version}</maven.compiler.release>
         <version.maven>3.6.0</version.maven>
         <!-- plugin versions should go here, so below they can be omitted -->
@@ -25,6 +25,9 @@
         <version.plugin.maven.checkstyle>3.0.0</version.plugin.maven.checkstyle>
         <!-- dependencies versions -->
         <version.testng>7.3.0</version.testng>
+        <version.jmh>1.9.3</version.jmh>
+        <version.javax.annotation>1.3.2</version.javax.annotation>
+        <version.common.lang3>3.11</version.common.lang3>
     </properties>
 
     <dependencies>
@@ -33,6 +36,27 @@
             <artifactId>testng</artifactId>
             <version>${version.testng}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${version.jmh}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${version.jmh}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>${version.javax.annotation}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${version.common.lang3}</version>
         </dependency>
     </dependencies>
 
@@ -62,6 +86,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${version.plugin.maven.compiler}</version>
+                <configuration>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -73,7 +100,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${version.plugin.maven.surefire}</version>
                 <configuration>
-                    <argLine>-XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Dtestng.dtd.http=true -Xmx256m</argLine>
+                    <argLine>--enable-preview -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -Dtestng.dtd.http=true -Xmx256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
